# plexus

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE_USER.md  LICENSE  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  package-lock.json  package.json  start_all.sh  verify_quality.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
plexus-ai/: Cargo.toml
plexus-ai/src/: chat.rs  engine.rs  lib.rs  memory.rs  voice.rs
plexus-ai/tests/: lance_test.rs  memory_test.rs
plexus-core/: Cargo.toml
plexus-core/src/: lib.rs  plugin.rs
plexus-gateway/: Cargo.toml  moltbot_adapter.py  verify_ws.py
plexus-gateway/src/: main.rs
plexus-node/: Cargo.toml
plexus-node/src/: main.rs
plexus-p2p/: Cargo.toml
plexus-p2p/src/: crdt.rs  identity.rs  lib.rs  node_service.rs  protocol.rs  swarm.rs
plexus-p2p/tests/: connectivity.rs  crdt_test.rs  partition_test.rs
plexus-ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
plexus-ui/src/: App.css  App.tsx  index.css
plexus-ui/src-tauri/: Cargo.toml  chat_history.json  tauri.conf.json
plexus-ui/src-tauri/src/: main.rs
plexus-ui/src/components/: ChatView.tsx  Dashboard.tsx  DashboardView.tsx  GatewayView.tsx  OnboardingWizard.tsx  ScanToMesh.tsx
plexus-ui/src/hooks/: useDeviceType.ts  usePairing.ts
plexus-ui/src/routes/: Home.tsx
plexus-ui/tests/e2e/: mocks.ts  onboarding.spec.ts
plexus-voice/: Cargo.toml
plexus-voice/src/: lib.rs
