[package]
name = "plexus-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.8", features = ["default", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
