[package]
name = "plexus-ui"
version = "0.1.0"
description = "Plexus Mesh UI"
authors = ["Plexus-Mesh Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plexus-p2p = { path = "../../plexus-p2p" }
tokio = { version = "1", features = ["full"] }

